# MarylandHousingRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  diag_retrieval.py  docker-compose.test.yml  docker-compose.yml  download-corpus.sh  mkdocs.yml  output.txt  pyproject.toml  runrerank.py
.github/workflows/: ci.yml  docker.yml
corpus/: sources.md
docker/: Dockerfile
docker/postgres/: 01_schema.sql
docs/: design-doc.md  index.md
docs/architecture/: data-model.md  decisions.md  operations.md  overview.md  retrieval.md  security-legal.md
docs/reference/: cli.md
evals/: README.md  __init__.py  eval_set.json  faithfulness_eval.py  inspect_answer.py  pyproject.toml  retrieval_eval.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CitationCard.tsx
frontend/src/lib/: useAsk.ts  useHistory.ts  useSources.ts  utils.ts
frontend/src/pages/: AskPage.tsx  HistoryPage.tsx  SourcesPage.tsx
nginx/: nginx.conf
src/mdhpp/: __init__.py  cli.py
src/mdhpp/_impl/: __init__.py  download_models.py  ingest.py  serve.py
tests/integration/: test_schema.py
tests/unit/: test_api.py  test_core.py
