[project]
name = "mdhousingpolicypipeline"
version = "0.1.0"
description = "Retrieval-grounded advisory over Maryland housing/HOA law — guidance and citations, not verdicts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# The root is the unified CLI package; member logic lives in packages/*.
dependencies = [
    "mdhpp-core",
    "mdhpp-ingestion",
    "mdhpp-retrieval",
    "mdhpp-api",
    "typer>=0.12",
]

[project.scripts]
mdhpp = "mdhpp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdhpp"]

[dependency-groups]
# Dev tooling shared across the whole workspace, installed with `uv sync`.
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "types-psycopg2>=2.9.0",
    "httpx>=0.28.1",
]
# Docs toolchain — MkDocs Material + auto API reference. Installed on demand
# with `uv sync --group docs` (kept out of the default dev install).
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
# CPU-only torch. retrieval pulls torch via FlagEmbedding; on Linux, PyPI's
# torch declares the nvidia/CUDA libraries as dependencies (~1.5GB we have no
# GPU for). Override each to an impossible marker so it resolves to nothing on
# every platform, leaving torch to install its CPU form. (This uv version does
# not support the newer `torch-backend` key.)
override-dependencies = [
    "nvidia-cublas-cu12; sys_platform == 'never'",
    "nvidia-cuda-cupti-cu12; sys_platform == 'never'",
    "nvidia-cuda-nvrtc-cu12; sys_platform == 'never'",
    "nvidia-cuda-runtime-cu12; sys_platform == 'never'",
    "nvidia-cudnn-cu12; sys_platform == 'never'",
    "nvidia-cufft-cu12; sys_platform == 'never'",
    "nvidia-cufile-cu12; sys_platform == 'never'",
    "nvidia-curand-cu12; sys_platform == 'never'",
    "nvidia-cusolver-cu12; sys_platform == 'never'",
    "nvidia-cusparse-cu12; sys_platform == 'never'",
    "nvidia-cusparselt-cu12; sys_platform == 'never'",
    "nvidia-nccl-cu12; sys_platform == 'never'",
    "nvidia-nvjitlink-cu12; sys_platform == 'never'",
    "nvidia-nvshmem-cu12; sys_platform == 'never'",
    "nvidia-nvtx-cu12; sys_platform == 'never'",
]

[tool.uv.sources]
mdhpp-core = { workspace = true }
mdhpp-ingestion = { workspace = true }
mdhpp-retrieval = { workspace = true }
mdhpp-api = { workspace = true }

# ----------------------------------------------------------------------------
# Ruff — lint + format, applied across the workspace.
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "packages/core/src", "packages/ingestion/src", "packages/retrieval/src", "packages/api/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["PLR2004", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
# Test files: allow assert, magic values, inlineable lambdas (fixture stubs),
# and lazy imports inside fixtures/helpers.
"packages/*/tests/**" = ["PLR2004", "S101", "PLW0108", "PLC0415"]
# Typer CLI dispatch: PLC0415 (subcommand impls are imported lazily inside
# handlers, by design) and B008 (typer.Option(...) in defaults is Typer's API).
"src/mdhpp/**" = ["PLC0415", "B008"]
# The API lazy-imports heavy model deps inside handlers so the module and
# healthcheck stay light (torch isn't loaded until the first /ask request).
"packages/api/src/mdhpp_api/app.py" = ["PLC0415"]

# ----------------------------------------------------------------------------
# mypy — strict, workspace-wide.
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
mypy_path = [
    "src",
    "packages/core/src",
    "packages/ingestion/src",
    "packages/retrieval/src",
    "packages/api/src",
]
explicit_package_bases = true

[[tool.mypy.overrides]]
# Third-party libs without stubs — don't fail strict mode on them.
module = ["pgvector.*", "FlagEmbedding.*", "sentence_transformers.*", "trafilatura.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# pytest — marker-gated unit vs integration suites.
# `pytest -m unit` runs fast, no external services.
# `pytest -m integration` needs the dockerized pgvector up.
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
# Discover tests both in the root tests/ tree and co-located under each
# package (packages/*/tests). importlib mode handles the distributed layout
# without needing __init__.py in every test dir or name collisions.
testpaths = ["tests", "packages"]
asyncio_mode = "auto"
markers = [
    "unit: fast, no external dependencies (default in CI lint stage)",
    "integration: requires the dockerized pgvector data plane",
]
addopts = "--strict-markers -ra --import-mode=importlib"
